--- a/source/css/main.css
+++ b/source/css/main.css
@@ -48,16 +48,22 @@ body {
 
 h1, h2, h3, h4, h5 {
   color: #808181;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 1.3em;
   margin: 0; }
 
 h1 {
   font-size: 14px;
+  font-size: 1.4rem;
+  font-weight: 800;
   letter-spacing: 0.1em;
   margin-bottom: 10px;
   margin-bottom: 1rem;
   text-transform: uppercase; }
+
+h2 {
+  font-size: 11px;
+  font-size: 1.1rem; }
 
 a, a:visited {
   color: #808181;
