--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -1,4 +1,4 @@
 <header class="main-header">
-<h1>Transition Pattern Library</h1>
+<h1><a href="/">Transition Pattern Library</a></h1>
 <h2><%= data.page.title %></h2>
 </header>
