--- a/source/hovers/index.html.erb
+++ b/source/hovers/index.html.erb
@@ -1,3 +1,10 @@
 ---
 title: Hovers
 ---
+
+<!-- Dynamically list files here?
+  middleman-listpages? -->
+
+<ul>
+  <li><a href="/hovers/fade-in.html">Fade-in</a></li>
+</ul>
