--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: PXU TPL
+title: Home
 ---
 
 <h3>Content transitions</h3>
@@ -9,6 +9,11 @@ title: PXU TPL
 -
 
 <h3><a href="/hovers/">Hover transitions</a></h3>
-- 
--
--
+
+
+<!-- Dynamically list files here?
+  middleman-listpages? -->
+
+<ul>
+  <li><a href="/hovers/fade-in.html">Fade-in</a></li>
+</ul>
