Wrapped yield in content div

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -19,7 +19,9 @@
   <body>
     <div class="container">
       <%= partial "header" %>
-      <%= yield %>
+      <div class="content">
+        <%= yield %>
+      </div><!-- content -->
     </div><!-- container -->
 
   </body>
