fade-in example markup

--- a/source/hovers/fade-in.html.erb
+++ b/source/hovers/fade-in.html.erb
@@ -2,5 +2,9 @@
 title: Fade-in
 css: hovers.css
 ---
-<div class="block image tall">
-</div><!-- block image tall -->
+
+<div class="block-container">
+  <div class="block tall">
+
+  </div><!-- block tall -->
+</div><!-- block-container -->
