Wayfinding markup and style

--- a/source/hovers/index.html.erb
+++ b/source/hovers/index.html.erb
@@ -5,6 +5,8 @@ title: Hovers
 <!-- Dynamically list files here?
   middleman-listpages? -->
 
+<h3>Hover Transitions</h3>
+
 <ul>
   <li><a href="/hovers/fade-in.html">Fade-in</a></li>
 </ul>
