--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,9 +4,12 @@ title: Home
 
 <h3>Content transitions</h3>
 
--
--
--
+<ul>
+  <li>One</li>
+  <li>Two</li>
+  <li>three</li>
+  <li>Four</li>
+</ul>
 
 <h3><a href="/hovers/">Hover transitions</a></h3>
 
