--- a/source/css/main.css
+++ b/source/css/main.css
@@ -76,11 +76,13 @@ b, strong {
   font-weight: 700; }
 
 p {
-  margin: 14px 0; }
+  margin: 14px 0;
+  margin: 1.4rem 0; }
 
 ul, ol, dl {
   list-style: none;
-  margin: 0;
+  margin: 0 0 14px 0;
+  margin: 0 0 1.4rem 0;
   padding: 0; }
 
 li {
