Initial fade in demo markup

--- a/source/hovers/fade-in.html.erb
+++ b/source/hovers/fade-in.html.erb
@@ -1,10 +1,16 @@
 ---
 title: Fade-in
 css: hovers.css
+body_class: fade-in
 ---
 
 <div class="block-container">
-  <div class="block tall">
-
-  </div><!-- block tall -->
+  <div class="block super-tall medium">
+    <div class="overlay">
+      <div class="circle white">
+      </div><!-- circle white -->
+      <div class="block title">
+      </div><!-- block title -->
+    </div><!-- overlay -->
+  </div><!-- block super-tall medium -->
 </div><!-- block-container -->
