--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,7 +13,6 @@
     <% if current_page.data.css %>
     <%= stylesheet_link_tag current_page.data.css %>
     <% end %>
-    <%= javascript_include_tag  "main" %>
   </head>
   
   <body class="<% if current_page.data.body_class %><%= current_page.data.body_class %><%end %>">
@@ -23,6 +22,12 @@
         <%= yield %>
       </div><!-- content -->
     </div><!-- container -->
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <%= javascript_include_tag "main" %>
+    <% if current_page.data.js %>
+    <%= javascript_include_tag current_page.data.js %>
+    <% end %>
 
   </body>
 </html>
