--- a/source/hovers/fade-in.html.erb
+++ b/source/hovers/fade-in.html.erb
@@ -8,9 +8,9 @@ body_class: fade-in
 <div class="block-container">
   <div class="block super-tall medium">
     <div class="overlay">
-      <div class="circle white">
+      <div class="circle medium-light">
       </div><!-- circle white -->
-      <div class="block title">
+      <div class="block title dark">
       </div><!-- block title -->
     </div><!-- overlay -->
   </div><!-- block super-tall medium -->
