--- a/source/css/main.css
+++ b/source/css/main.css
@@ -40,37 +40,53 @@ html {
   vertical-align: baseline; }
 
 body {
-  color: #808181;
+  color: #4e4e4e;
   font-family: "Proxima Nova", "helvetica neue", arial, sans-serif;
   font-size: 14px;
   font-size: 1.4rem;
   line-height: 1.5; }
 
 h1, h2, h3, h4, h5 {
-  color: #808181;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1.3em;
   margin: 0; }
 
 h1 {
-  font-size: 14px;
-  font-size: 1.4rem;
-  font-weight: 700;
+  font-size: 16px;
+  font-size: 1.6rem;
   margin-bottom: 7px;
   margin-bottom: 0.7rem;
   text-transform: uppercase; }
 
 h2 {
-  font-size: 11px;
-  font-size: 1.1rem; }
+  font-size: 18px;
+  font-size: 1.8rem;
+  margin-bottom: 14px;
+  margin-bottom: 1.4rem; }
+
+h3 {
+  font-size: 14px;
+  font-size: 1.4rem;
+  margin-bottom: 7px;
+  margin-bottom: 0.7rem; }
 
 a, a:visited {
-  color: #808181;
+  border-bottom: 1px solid #d9dbdc;
+  color: #4e4e4e;
+  font-weight: 700;
   text-decoration: none; }
 
 a:hover, a:active, a:focus {
-  color: #808181;
+  border-bottom: 1px solid #808181;
+  color: #222222;
   outline: 0; }
+
+h2 a, h2 a:visited, h3 a, h3 a:visited {
+  color: #4e4e4e;
+  border-bottom: none; }
+
+h2 a:hover, h3 a:hover {
+  border-bottom: none; }
 
 b, strong {
   font-weight: 700; }
@@ -130,18 +146,27 @@ Layout
   padding: 2rem; }
 
 /*
+Lists
+*/
+.list-group {
+  margin-bottom: 40px;
+  margin-bottom: 4rem; }
+
+/*
+Demo
+*/
+.demo h3 {
+  color: #808181;
+  text-align: center; }
+
+/*
 Header
 */
-a.logotype {
-  color: #808181;
-  display: block;
-  font-size: 16px;
-  font-size: 1.6rem;
-  font-weight: 700;
-  line-height: 20px;
-  line-height: 2rem;
-  margin: 0 0 20px 30px;
-  margin: 0 0 2rem 3rem; }
+.breadcrumbs {
+  font-size: 11px;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1em; }
 
 /*
 Adaptive
