general layout markup tweaks

--- a/source/hovers/fade-in.html.erb
+++ b/source/hovers/fade-in.html.erb
@@ -4,14 +4,17 @@ css: hovers.css
 js: hovers.js
 body_class: fade-in
 ---
+<div class="demo">
+  <div class="block-container">
+    <div class="block super-tall medium">
+      <div class="overlay">
+        <div class="circle medium-light">
+        </div><!-- circle white -->
+        <div class="block title dark">
+        </div><!-- block title -->
+      </div><!-- overlay -->
+    </div><!-- block super-tall medium -->
+  </div><!-- block-container -->
 
-<div class="block-container">
-  <div class="block super-tall medium">
-    <div class="overlay">
-      <div class="circle medium-light">
-      </div><!-- circle white -->
-      <div class="block title dark">
-      </div><!-- block title -->
-    </div><!-- overlay -->
-  </div><!-- block super-tall medium -->
-</div><!-- block-container -->
+  <h3>Fade-in</h3>
+</div><!-- demo -->
