--- a/source/hovers/index.html.erb
+++ b/source/hovers/index.html.erb
@@ -2,11 +2,10 @@
 title: Hovers
 ---
 
-<!-- Dynamically list files here?
-  middleman-listpages? -->
-
-<h3>Hover Transitions</h3>
-
-<ul>
-  <li><a href="/hovers/fade-in.html">Fade-in</a></li>
-</ul>
+<div class="list-group">
+  <h2>Hover Transitions</h2>
+  <ul>
+    <li><a href="/hovers/fade-in.html">Fade-in</a></li>
+    <li><a href="/hovers/two-step-fade-in.html">Two step fade-in</a></li>
+  </ul>
+</div><!-- list-group -->
