--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,21 +2,20 @@
 title: Home
 ---
 
-<h3>Content transitions</h3>
+<div class="list-group">
+<h2>Content transitions</h2>
+  <ul>
+    <li>One</li>
+    <li>Two</li>
+    <li>three</li>
+    <li>Four</li>
+  </ul>
+</div><!-- list-group -->
 
-<ul>
-  <li>One</li>
-  <li>Two</li>
-  <li>three</li>
-  <li>Four</li>
-</ul>
-
-<h3><a href="/hovers/">Hover transitions</a></h3>
-
-
-<!-- Dynamically list files here?
-  middleman-listpages? -->
-
-<ul>
-  <li><a href="/hovers/fade-in.html">Fade-in</a></li>
-</ul>
+<div class="list-group">
+  <h2><a href="/hovers/">Hover transitions</a></h2>
+  <ul>
+    <li><a href="/hovers/fade-in.html">Fade-in</a></li>
+    <li><a href="/hovers/two-step-fade-in.html">Two step fade-in</a></li>
+  </ul>
+</div><!-- list-group -->
