--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -1,6 +1,8 @@
 <header class="main-header">
-<h1><a href="/">Transition Pattern Library</a></h1>
-<% if current_page.data.title != "Home" %>
-  <h2><a href="/">Home</a> / <% if current_page.parent.data.title != "Home" %><%= link_to current_page.parent.data.title, current_page.parent %> / <% end %><%= data.page.title %></h2>
-<% end %>
+<h1>Transition Pattern Library</h1>
+<div class="breadcrumbs">
+  <% if current_page.data.title != "Home" %>
+    <a href="/">Home</a> / <% if current_page.parent.data.title != "Home" %><%= link_to current_page.parent.data.title, current_page.parent %> / <% end %><%= data.page.title %>
+  <% end %>
+</div><!-- breadcrumbs -->
 </header>
