Added listpages gem, config and markup

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,4 +18,5 @@ title: Home
     <li><a href="/hovers/fade-in.html">Fade-in</a></li>
     <li><a href="/hovers/two-step-fade-in.html">Two step fade-in</a></li>
   </ul>
+  <%= list_pages %>
 </div><!-- list-group -->
