--- a/source/hovers/index.html.erb
+++ b/source/hovers/index.html.erb
@@ -8,4 +8,5 @@ title: Hovers
     <li><a href="/hovers/fade-in.html">Fade-in</a></li>
     <li><a href="/hovers/two-step-fade-in.html">Two step fade-in</a></li>
   </ul>
+  <%= list_pages current_page %>
 </div><!-- list-group -->
