--- a/source/css/main.css
+++ b/source/css/main.css
@@ -148,9 +148,15 @@ Layout
 /*
 Lists
 */
-.list-group {
-  margin-bottom: 40px;
-  margin-bottom: 4rem; }
+.home .list-group {
+  font-size: 16px;
+  font-size: 1.6rem; }
+
+.list-group ul li li {
+  font-size: 14px;
+  font-size: 1.4rem;
+  margin-left: 20px;
+  margin-left: 2rem; }
 
 /*
 Demo
@@ -164,9 +170,7 @@ Header
 */
 .breadcrumbs {
   font-size: 11px;
-  font-size: 1.1rem;
-  text-transform: uppercase;
-  letter-spacing: 0.1em; }
+  font-size: 1.1rem; }
 
 /*
 Adaptive
