--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,22 +1,10 @@
 ---
 title: Home
+body_class: home
 ---
 
-<div class="list-group">
-<h2>Content transitions</h2>
-  <ul>
-    <li>One</li>
-    <li>Two</li>
-    <li>three</li>
-    <li>Four</li>
-  </ul>
-</div><!-- list-group -->
+<h2>Transitions</h2>
 
 <div class="list-group">
-  <h2><a href="/hovers/">Hover transitions</a></h2>
-  <ul>
-    <li><a href="/hovers/fade-in.html">Fade-in</a></li>
-    <li><a href="/hovers/two-step-fade-in.html">Two step fade-in</a></li>
-  </ul>
   <%= list_pages %>
 </div><!-- list-group -->
