--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,14 @@
   
   <body class="<% if current_page.data.body_class %><%= current_page.data.body_class %><%end %>">
     <div class="container">
-      <%= partial "header" %>
+      <header class="main-header">
+        <h1>Transition Pattern Library</h1>
+        <div class="breadcrumbs">
+          <% if current_page.data.title != "Home" %>
+            <a href="/">Home</a> / <% if current_page.parent.data.title != "Home" %><%= link_to current_page.parent.data.title, current_page.parent %> / <% end %><%= data.page.title %>
+          <% end %>
+        </div><!-- breadcrumbs -->
+      </header>
       <div class="content">
         <%= yield %>
       </div><!-- content -->
